--- a/assignments/assignment05/assignment_07.2_BasakAtanu.rmd
+++ b/assignments/assignment05/assignment_07.2_BasakAtanu.rmd
@@ -1,10 +1,9 @@
 ---
 title: "Assignment on Student Survey"
 author: "Basak Atanu"
-date: 04-25-2022
+date: "04-25-2022"
 output:
-  
-  word_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
