--- a/assignments/Final Project/assignment_10.3_Final_Project.rmd
+++ b/assignments/Final Project/assignment_10.3_Final_Project.rmd
@@ -23,6 +23,13 @@ summary(loan_data)
 ```{r}
 setwd("C:\\Users\\atanu\\Documents\\BellevueUniversity_MSDS\\DSC520\\Loan Defaulter Data")
 application_data <- read.csv("application_data.csv")
-summary(application_data)
+
 ```
 ### This data set is about loan application where Target field having 1 means the applicant have difficulty while paying for the loan and also have more than x day late payment.
+
+### Below are the list of Questions, that we are planning to answer using this data.
+## 1. What attributes affect loan default and what are some major reasons behind it?
+## 2. Is there any co-realation between different attributes of loan default data and gereral loan data?
+## 3. I think, Income having a direct effect on loan default, because low income could cause default for loan payment. is it true?
+## 4. Can I predict if the loan will go to default if I have employment, annual salary and bank balance information?
+## 5. Does high fico socre give lower interest retes for loan?.
